--- a/index.html
+++ b/index.html
@@ -25,21 +25,19 @@
                     <a href="#">
                         <p>HOME</p>
                     </a>
-                    <a href="#">
+                    <a href="#about">
                         <p>ABOUT</p>
                     </a>
-                    <a href="#">
-                        <p>SERVICES</p>
+                    <a href="#experiences">
+                        <p>Experiences</p>
                     </a>
-                    <a href="#">
-                        <p>WORK</p>
+                    <a href="#blog">
+                        <p>Blog</p>
                     </a>
-                    <a href="#">
-                        <p>BLOG</p>
-                    </a>
+
                 </div>
                 <div class="right">
-                    <Button class="btn">CONTACT</Button>
+                    <a href="#contact"> <Button class="btn">CONTACT</Button></a>
                 </div>
             </nav>
         </div>
@@ -67,7 +65,7 @@
 
         </section>
 
-        <section class="second-section">
+        <section class="second-section" id="about">
             <div class="parent-div">
                 <div class="half-width">
                     <img src="./Images/image 2.png" alt="">
@@ -90,7 +88,7 @@
         </section>
     </div>
 
-    <section class="third-section">
+    <section class="third-section" id="experiences">
         <div class="first-div">
             <h1>Experiences</h1>
             <div class="parent-div">
@@ -125,7 +123,7 @@
         </div>
     </section>
 
-    <section class="blog">
+    <section class="blog" id="blog">
         <div class="heading">
             <h2><span>My</span> Blogs</h2>
             <p>I Provide high strandard clean website for your business solutions</p>
@@ -186,7 +184,7 @@
         </div>
     </section>
 
-    <section class="contact-us">
+    <section class="contact-us" id="contact">
         <div class="heading">
             <h2>Contact <span>Me</span></h2>
             <p>I Provide high strandard clean website for your business solutions</p>
